%% Mermaid class diagram for Basketful app
classDiagram
    class User {
        +int id
        +String username
        +String email
    }
    class AccountBalance {
        +int id
        +int account_id
        +Decimal balance
        +DateTime last_updated
    }
    class Category {
        +int id
        +String name
        +String slug
    }
    class Product {
        +int id
        +String name
        +Decimal price
        +int category_id
    }
    class Tag {
        +int id
        +String name
        +String slug
    }
    class Order {
        +int id
        +int user_id
        +String status
        +Decimal total
        +DateTime created_at
    }
    class OrderItem {
        +int id
        +int order_id
        +int product_id
        +int quantity
        +Decimal price
    }
    class Voucher {
        +int id
        +String code
        +Decimal amount
        +DateTime expires_at
        +bool active
    }
    class OrderVoucher {
        +int id
        +int order_id
        +int voucher_id
        +Decimal applied_amount
    }
    class OrderValidationLog {
        +int id
        +int order_id
        +String status
        +String message
        +DateTime created_at
    }

    User "1" -- "0..*" Order : places
    User "1" -- "1" AccountBalance : has
    Category "1" -- "0..*" Product : contains
    Product "*" -- "*" Tag : tagged_with
    Order "1" -- "0..*" OrderItem : contains
    OrderItem "*" -- "1" Product : for
    Order "1" -- "0..*" OrderVoucher : uses
    OrderVoucher "*" -- "1" Voucher : applies
    Order "1" -- "0..*" OrderValidationLog : logs
